# gltfloupe

./: .gitIgnore  README.md  print_profile.py  pyproject.toml  setup.cfg  setup.py  stubgen.py
gltf_inspector/: __init__.py  __main__.py  _version.py  glb.py  gltf_buffer_accessor.py  json_tree.py  skin_debug.py
gltfloupe/: _version.py  app.py  skin_debug.py
src/gltfloupe/: animation.py  app.py  config.py  gltf_loader.py  json_tree.py  jsonutil.py  skin_debug.py
src/gltfloupe/assets/: gltf.fs  gltf.vs
src/gltfloupe/gui/: accessor_table.py  animation.py  dockspace.py  glfw.py  glfw_window.py  gui.py  jsontree.py  loghandler.py  prop.py
src/gltfloupe/gui/pyimgui_backend/: glfw.py  opengl.py
tests/: test_js2string.py  test_memoryview.py
