[metadata]
name= gltfloupe
url= https://ousttrue.github.io/gltfloupe/
description= glTF debug viewer
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
license=zlib
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Graphics :: 3D Modeling
keywords= opengl, gltf
include_package_data = True

[options]
packages=find:
install_requires =
  glglue
  pyside6
  pillow

[options.entry_points]
gui_scripts =
    gltfloupe = gltfloupe:run

[options.package_data]
* = *.vs, *.fs
