[metadata]
name= gltfloupe
url= https://ousttrue.github.io/gltfloupe/
project_urls=
    source= https://github.com/ousttrue/gltfloupe
description= glTF debug viewer
long_description= file: README.md
long_description_content_type= text/markdown
author= ousttrue
author_email= ousttrue@gmail.com
classifiers=
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Graphics :: 3D Modeling
keywords= opengl, gltf
include_package_data = True

[options]
packages=find:
package_dir=
    =src
install_requires =
  glglue>=1.8.3
  pygltfio>=0.3.0
  pyside6
  pillow

[options.entry_points]
gui_scripts =
    gltfloupe = gltfloupe:run

[options.package_data]
* = *.vs, *.fs
